[metadata]
name = django_trackings
version = 0.6.1a0
description = A Django app that tracks your queries to help optimize them.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tijani-dia/dj-tracker/
author = Tidiane Dia
author_email = atdia97@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation=https://tijani-dia.github.io/dj-tracker/
    Source=https://github.com/tijani-dia/dj-tracker/
    Issue tracker=https://github.com/tijani-dia/dj-tracker/issues/

[options]
packages = find_namespace:
install_requires =
    django>=3.2
    django-filter
python_requires = >=3.8
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    Cython>=3.0.0b2
    autoflake
    black>=23.1
    factory-boy
    flake8
    isort
    pytailwindcss
docs =
    mkdocs
    mkdocs-material
test =
    factory-boy

[bdist_wheel]
python-tag = py3

[tool:isort]
profile = black
known_first_party = "dj_tracker"

[flake8]
extend-ignore = E501, E203
exclude = **/migrations/*.py
filename = *.py, *.pyx
per-file-ignores = src/dj_tracker/*.pyx:E999
